--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -30,7 +30,7 @@ permissions = {path = "../pallets/permissions" }
 xor-fee = {path = "../pallets/xor-fee"}
 template-rpc = { path = "../pallets/template/rpc" }
 trading-pair-rpc = { path = "../pallets/trading-pair/rpc" }
-
+assets-rpc = { path = "../pallets/assets/rpc" }
 # Parachain dependencies
 parachain-runtime = { path = "../runtime" }
 
