--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -7,6 +7,7 @@ edition = '2018'
 [dependencies]
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
+hex-literal = "0.3.1"
 
 trading-pair = { path = "../pallets/trading-pair", default-features = false}
 trading-pair-runtime-api = { path = "../pallets/trading-pair/runtime-api", default-features = false }
@@ -62,6 +63,7 @@ cumulus-primitives = { git = "https://github.com/paritytech/cumulus",  default-f
 # Additional dependencies
 common = { path = "../common", default-features = false }
 assets = { path = "../pallets/assets", default-features = false }
+assets-runtime-api = { path = "../pallets/assets/runtime-api", default-features = false }
 #iroha-bridge = { path = "../pallets/iroha-bridge", default-features = false }
 static_assertions = "1.1.0"
 
@@ -116,6 +118,7 @@ std = [
 	"currencies/std",
 	"tokens/std",
 	"assets/std",
+	"assets-runtime-api/std",
 	"permissions/std",
 ]
 
