--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -13,6 +13,7 @@ package = 'parity-scale-codec'
 version = '1.3.1'
 
 [dependencies]
+serde = { version = "1.0", optional = true }
 frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
@@ -53,4 +54,5 @@ std = [
     'permissions/std',
     'dex-manager/std',
     'trading-pair/std',
+    'mock-liquidity-source/std',
 ]
