--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Vladislav Markushin <negigic@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+byteorder = "1.3.4"
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0", optional = true }
 static_assertions = "1.1.0"
@@ -20,6 +21,8 @@ sp-runtime = { version = "2.0.0", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
 currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
 orml-traits = { version = "0.3.2", package = "orml-traits", default-features = false }
+derive_more = { version = "0.99.11", default-features = false }
+fixnum = { version = "0.2.2", default-features = false, features = ["i128"] }
 
 [dev-dependencies]
 serde_json = "1.0.41"
@@ -34,7 +37,7 @@ std = [
     'num-traits/std',
     'frame-support/std',
     'frame-system/std',
-    'sp-arithmetic/std',
+    'fixnum/std',
     'sp-core/std',
     'sp-runtime/std',
     'sp-std/std',
