--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -9,6 +9,7 @@ targets = ['x86_64-unknown-linux-gnu']
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
+frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
 frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
 sp-core = { version = "2.0.0", default-features = false }
@@ -19,12 +20,12 @@ tokens = { version = "0.3.2", package = "orml-tokens", default-features = false 
 traits = { version = "0.3.2", package = "orml-traits", default-features = false }
 common = { path = "../../common", default-features = false }
 permissions = { path = "../permissions", default-features = false }
+hex-literal = "0.3.1"
 
 [dev-dependencies]
 pallet-balances = { version = "2.0.0", default-features = false }
 sp-io = { version = "2.0.0", default-features = false }
 sp-runtime = { version = "2.0.0", default-features = false }
-hex-literal = "0.3.1"
 
 [features]
 default = ['std']
@@ -40,4 +41,9 @@ std = [
     'traits/std',
     'common/std',
     'permissions/std',
+]
+runtime-benchmarks = [
+    "frame-benchmarking",
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
 ]
