--- a/pallets/dex-api/Cargo.toml
+++ b/pallets/dex-api/Cargo.toml
@@ -31,6 +31,8 @@ sp-io = { version = "2.0.0", default-features = false }
 sp-runtime = { version = "2.0.0", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
+pool-xyk = { path = "../pool-xyk", default-features = false }
+hex-literal = "0.3.1"
 
 [features]
 default = ['std']
