--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -14,6 +14,7 @@ targets = ['x86_64-unknown-linux-gnu']
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
+frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
 frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
@@ -23,6 +24,8 @@ sp-std = { version = "2.0.0", default-features = false }
 pallet-timestamp = { version = "2.0.0", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
+
+hex-literal = { version = "0.3.1", optional = true }
 
 [dev-dependencies]
 sp-io = { version = "2.0.0", default-features = false }
@@ -39,4 +42,18 @@ std = [
     'frame-support/std',
     'frame-system/std',
     'sp-std/std',
+    'common/std',
+    'assets/std',
+    'sp-core/std',
+    'sp-runtime/std',
+    'pallet-timestamp/std',
+    'permissions/std',
+    'technical/std',
+]
+runtime-benchmarks = [
+    "frame-benchmarking",
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+
+    "hex-literal"
 ]
