--- a/pallets/technical/Cargo.toml
+++ b/pallets/technical/Cargo.toml
@@ -13,6 +13,7 @@ targets = ['x86_64-unknown-linux-gnu']
 
 [dependencies]
 codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+frame-benchmarking = { version = "2.0.0", default-features = false, optional = true }
 frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
 sp-runtime = { version = "2.0.0", default-features = false }
@@ -25,6 +26,10 @@ orml-traits = { version = "0.3.2", package = "orml-traits", default-features = f
 twox-hash = { version = "1.5.0", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
+trading-pair = { path = "../trading-pair", default-features = false, optional = true }
+permissions = { path = "../permissions", default-features = false, optional = true }
+
+hex-literal = { version = "0.3.1", optional = true }
 
 [dev-dependencies]
 sp-core = { version = "2.0.0", default-features = false }
@@ -47,4 +52,13 @@ std = [
     'sp-core/std',
     'sp-std/std',
     'serde',
+]
+runtime-benchmarks = [
+    "frame-benchmarking",
+    "frame-system/runtime-benchmarks",
+    "frame-support/runtime-benchmarks",
+    "trading-pair",
+    "permissions",
+
+    "hex-literal",
 ]
