--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -28,6 +28,7 @@ dex-manager-rpc = { path = "../pallets/dex-manager/rpc" }
 technical = {path = "../pallets/technical" }
 permissions = {path = "../pallets/permissions" }
 xor-fee = {path = "../pallets/xor-fee"}
+faucet = { path = "../pallets/faucet" }
 template-rpc = { path = "../pallets/template/rpc" }
 trading-pair-rpc = { path = "../pallets/trading-pair/rpc" }
 assets-rpc = { path = "../pallets/assets/rpc" }
