--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -23,11 +23,13 @@ traits = { package = "orml-traits", branch = "rococo-branch", git = "https://git
 sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 permissions = { path = "../permissions", default-features = false }
 common = { path = "../../common", default-features = false }
+tiny-keccak = { version = "2.0.1", features = ["keccak"] }
 
 [dev-dependencies]
 sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+hex-literal = "0.3.1"
 
 [features]
 default = ['std']
