Staking Sovereign Testnet
Update repository to substrate 2.0.0

WIP

Testrun

Using Babe

Writing sh instructions run_script.sh and add it into README.md

Testrun

Fixing problem with unexpected epoch change

CI updated

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

Small FIX

Using Alice account for everything

Update RPC

Update chain_spec

Chmod to run_script.sh

Fix blank spaces or newlines
PalletInfo FIX
Update README.md
Fix asset pair sorting for XOR in pool-xyk
Change runtime version to 0.1.0

Getting fee from destination support

For pool-xyk using fee %0.3 for source and destination

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,14 @@ members = [
     "runtime/",
     "common",
     "pallets/assets",
-    "pallets/parachain-info",
     "pallets/permissions",
-    "pallets/token-dealer",
     "pallets/trading-pair",
     "pallets/dex-manager",
     "pallets/dex-api",
     "pallets/farming",
+    "pallets/faucet",
     "pallets/liquidity-proxy",
     "pallets/mock-liquidity-source",
-    "pallets/template",
     "pallets/technical",
     "pallets/pool-xyk",
     "pallets/xor-fee",
@@ -23,3 +21,4 @@ members = [
 
 [profile.release]
 panic = 'unwind'
+
