--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -5,27 +5,21 @@ authors = ["Vladislav Markushin <negigic@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0", optional = true }
-codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false, features = ["derive"] }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-orml-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-blake2-rfc = { version = "0.2.18", default-features = false }
 static_assertions = "1.1.0"
-num-traits = { version = "0.2.12", default-features = false }
 rustc-hex = { version = "2.1.0", default-features = false }
-#twox-hash = { version = "1.5.0", default-features = false }
-
-cumulus-upward-message = { git = "https://github.com/paritytech/cumulus",  default-features = false, rev = '96da14c14fb785e106bb89a18c9dedaf2f789d2c' }
-rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }
-polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }
-polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch", default-features = false }
 smallvec = "1.5.0"
+blake2-rfc = { version = "0.2.18", default-features = false }
+num-traits = { version = "0.2.12", default-features = false }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
+sp-arithmetic = { version = "2.0.0", default-features = false }
+sp-core = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
+currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
+orml-traits = { version = "0.3.2", package = "orml-traits", default-features = false }
 
 [dev-dependencies]
 serde_json = "1.0.41"
@@ -33,19 +27,17 @@ serde_json = "1.0.41"
 [features]
 default = ['std']
 std = [
-    "serde",
     'codec/std',
+    'serde',
+    'rustc-hex/std',
+    'blake2-rfc/std',
+    'num-traits/std',
     'frame-support/std',
     'frame-system/std',
     'sp-arithmetic/std',
     'sp-core/std',
+    'sp-runtime/std',
+    'sp-std/std',
     'currencies/std',
     'orml-traits/std',
-    'blake2-rfc/std',
-    'num-traits/std',
-    'cumulus-upward-message/std',
-    'rococo-runtime/std',
-    'polkadot-core-primitives/std',
-    'polkadot-parachain/std',
-    #'twox-hash/std',
 ]
