--- a/pallets/assets/Cargo.toml
+++ b/pallets/assets/Cargo.toml
@@ -1,48 +1,43 @@
 [package]
 edition = '2018'
 name = 'assets'
-version = '2.0.0-rc5'
+version = '0.1.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '1.3.5'
-
 [dependencies]
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-permissions = { path = "../permissions", default-features = false }
-common = { path = "../../common", default-features = false }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
+sp-core = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
 tiny-keccak = { version = "2.0.1", features = ["keccak"] }
+currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
+tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
+traits = { version = "0.3.2", package = "orml-traits", default-features = false }
+common = { path = "../../common", default-features = false }
+permissions = { path = "../permissions", default-features = false }
 
 [dev-dependencies]
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+pallet-balances = { version = "2.0.0", default-features = false }
+sp-io = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
 hex-literal = "0.3.1"
 
 [features]
 default = ['std']
 std = [
-    'serde',
     'codec/std',
+    'serde',
     'frame-support/std',
     'frame-system/std',
+    'sp-core/std',
     'sp-std/std',
     'currencies/std',
     'tokens/std',
     'traits/std',
-    'sp-core/std',
-    'permissions/std',
     'common/std',
+    'permissions/std',
 ]
