--- a/pallets/dex-api/Cargo.toml
+++ b/pallets/dex-api/Cargo.toml
@@ -8,32 +8,27 @@ edition = '2018'
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '1.3.1'
-
 [dependencies]
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-common = { path = "../../common", default-features = false }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 assets = { path = "../assets", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
+common = { path = "../../common", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
-trading-pair = { path = "../trading-pair", default-features = false }
 mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
+currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
+tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
+traits = { version = "0.3.2", package = "orml-traits", default-features = false }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
+pallet-balances = { version = "2.0.0", default-features = false }
+serde = { version = "1.0.101", optional = true, features = ["derive"], default-features = false }
+sp-arithmetic = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+sp-core = { version = "2.0.0", default-features = false }
+sp-io = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
 
@@ -41,15 +36,15 @@ technical = { path = "../technical", default-features = false }
 default = ['std']
 std = [
     'codec/std',
+    'serde/std',
     'frame-support/std',
     'frame-system/std',
-    'common/std',
-    'assets/std',
     'currencies/std',
     'tokens/std',
     'traits/std',
-    'serde/std',
+    'assets/std',
+    'common/std',
     'dex-manager/std',
-    'trading-pair/std',
     'mock-liquidity-source/std',
+    'trading-pair/std',
 ]
