--- a/pallets/dex-api/rpc/Cargo.toml
+++ b/pallets/dex-api/rpc/Cargo.toml
@@ -6,14 +6,14 @@ edition = "2018"
 [dependencies]
 serde = { version = "1.0.101", features = ["derive"] }
 codec = { package = "parity-scale-codec", version = "1.3.0" }
-jsonrpc-core = "14.0.3"
-jsonrpc-core-client = "14.0.3"
-jsonrpc-derive = "14.0.3"
-sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
-sp-api = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
-sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
-sp-core = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
-sp-rpc = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
-dex-runtime-api = { path = "../runtime-api" }
+jsonrpc-core = "15.0.0"
+jsonrpc-core-client = "15.0.0"
+jsonrpc-derive = "15.0.0"
+sp-api = { version = "2.0.0", default-features = false }
+sp-blockchain = { version = "2.0.0", default-features = false }
+sp-core = { version = "2.0.0", default-features = false }
+sp-rpc = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
 common = { path = "../../../common" }
+dex-runtime-api = { path = "../runtime-api" }
