--- a/pallets/faucet/Cargo.toml
+++ b/pallets/faucet/Cargo.toml
@@ -19,21 +19,21 @@ version = '1.3.1'
 [dependencies]
 assets = { path = "../assets", default-features = false }
 common = { path = "../../common", default-features = false }
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
 serde = { version = "1.0.101", optional = true, features = ["derive"] }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+sp-arithmetic = { version = "2.0.0", default-features = false }
+sp-core = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
+pallet-timestamp = { version = "2.0.0", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
 
 [dev-dependencies]
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
+sp-io = { version = "2.0.0", default-features = false }
+pallet-balances = { version = "2.0.0", default-features = false }
+currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
+tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
 mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
 
 [features]
