--- a/pallets/liquidity-proxy/Cargo.toml
+++ b/pallets/liquidity-proxy/Cargo.toml
@@ -6,22 +6,17 @@ version = '0.1.0'
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '1.3.1'
-
 [dependencies]
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
+tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
+traits = { version = "0.3.2", package = "orml-traits", default-features = false }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
+pallet-balances = { version = "2.0.0", default-features = false }
+sp-arithmetic = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
 common = { path = "../../common", default-features = false }
 assets = { path = "../assets", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
@@ -29,11 +24,12 @@ trading-pair = { path = "../trading-pair", default-features = false }
 mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-permissions = { path = "../permissions", default-features = false }
+sp-core = { version = "2.0.0", default-features = false }
+sp-io = { version = "2.0.0", default-features = false }
 dex-api = { path = "../dex-api", default-features = false }
+mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
 technical = { path = "../technical", default-features = false }
+permissions = { path = "../permissions", default-features = false }
 
 [features]
 default = ['std']
@@ -41,16 +37,16 @@ std = [
     'codec/std',
     'frame-support/std',
     'frame-system/std',
-    'sp-std/std',
-    'sp-runtime/std',
+    'pallet-balances/std',
     'sp-arithmetic/std',
+    'sp-runtime/std',
+    'sp-std/std',
     'currencies/std',
     'tokens/std',
     'traits/std',
-    'pallet-balances/std',
-    'common/std',
     'assets/std',
+    'common/std',
     'dex-manager/std',
+    'permissions/std',
     'trading-pair/std',
-    'mock-liquidity-source/std',
 ]
