--- a/pallets/pool-xyk/Cargo.toml
+++ b/pallets/pool-xyk/Cargo.toml
@@ -6,37 +6,32 @@ homepage = 'https://github.com/soramitsu/SoraNeo-substrate'
 license = 'Unlicense'
 name = 'pool-xyk'
 repository = 'https://github.com/soramitsu/SoraNeo-substrate'
-version = '0.0.0'
+version = '0.1.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '1.3.1'
-
 [dependencies]
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
 common = { path = "../../common", default-features = false }
 technical = { path = "../technical", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 assets = { path = "../assets", default-features = false }
-orml-traits = { branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-num-traits = { version = "0.2.12", default-features = false }
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
 permissions = { path = "../permissions", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
+orml-traits = { version = "0.3.2", package = "orml-traits", default-features = false }
+num-traits = { version = "0.2.12", default-features = false }
+sp-core = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
 
 [dev-dependencies]
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
+sp-io = { version = "2.0.0", default-features = false }
+pallet-balances = { version = "2.0.0", default-features = false }
+tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
 
 [features]
 default = ['std']
