--- a/pallets/xor-fee/Cargo.toml
+++ b/pallets/xor-fee/Cargo.toml
@@ -6,40 +6,37 @@ homepage = 'https://substrate.dev'
 license = 'Unlicense'
 name = 'xor-fee'
 repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
-version = '2.0.0-rc5'
+version = '0.1.0'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[dependencies.codec]
-default-features = false
-features = ['derive']
-package = 'parity-scale-codec'
-version = '1.3.1'
-
 [dependencies]
-frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-traits = { package = "orml-traits", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
+traits = { version = "0.3.2", package = "orml-traits", default-features = false }
+frame-support = { version = "2.0.0", default-features = false }
+frame-system = { version = "2.0.0", default-features = false }
+sp-arithmetic = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
+sp-std = { version = "2.0.0", default-features = false }
+#pallet-staking = { git = "https://github.com/soramitsu/SoraNeo-frame-pallets", default-features = false, branch = "selected-v2.0.0"}
+pallet-transaction-payment = { git = "https://github.com/soramitsu/SoraNeo-frame-pallets", default-features = false, branch = "selected-v2.0.0"}
 referral-system = { path = "../referral-system", default-features = false}
-pallet-transaction-payment = { git = "https://github.com/eadventurous/pallet-transaction-payment", default-features = false, branch = "rococo-branch"}
-common = { path = "../../common", default-features = false }
 assets = { path = "../assets", default-features = false }
+common = { path = "../../common", default-features = false }
 technical = { path = "../technical", default-features = false }
-sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false }
+
 
 [dev-dependencies]
-sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "rococo-branch" }
-permissions = { path = "../permissions", default-features = false }
-currencies = { package = "orml-currencies", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-tokens = { package = "orml-tokens", branch = "rococo-branch", git = "https://github.com/vmarkushin/open-runtime-module-library", default-features = false }
-mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
+pallet-balances = { version = "2.0.0", default-features = false }
+sp-core = { version = "2.0.0", default-features = false }
+sp-io = { version = "2.0.0", default-features = false }
+sp-runtime = { version = "2.0.0", default-features = false }
+currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
+tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
 dex-manager = { path = "../dex-manager", default-features = false }
+mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
+permissions = { path = "../permissions", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 
 [features]
@@ -47,13 +44,15 @@ default = ['std']
 std = [
     'codec/std',
     'traits/std',
-    'sp-std/std',
-    'sp-runtime/std',
-    'sp-arithmetic/std',
-    'pallet-transaction-payment/std',
-    'referral-system/std',
     'frame-support/std',
     'frame-system/std',
+    'pallet-balances/std',
+    #'pallet-staking/std',
+    'pallet-transaction-payment/std',
+    'sp-arithmetic/std',
+    'sp-runtime/std',
+    'sp-std/std',
+    'referral-system/std',
     'common/std',
     'technical/std',
 ]
