PSS-176: Implement runtime upgrade (#90)
Co-authored-by: Alexey Kalita <kalita@kalita@soramitsu.co.jp>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,8 @@
+[patch.crates-io]
+jsonrpc-core = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
+jsonrpc-ws-server = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
+jsonrpc-server-utils = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
+
 [workspace]
 members = [
     "runtime/",
