[DOPS-1252]  Update Sora2 CI (#101)
* CI updated

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

* CI updated

Signed-off-by: Dmitriy Creed <creed@soramitsu.co.jp>

--- a/housekeeping/docker/develop/Dockerfile
+++ b/housekeeping/docker/develop/Dockerfile
@@ -11,7 +11,7 @@ ENV RUST_VERSION=nightly-2020-10-06
 RUN apt-get update && \
     apt-get install --no-install-recommends -y \
         ca-certificates apt-transport-https gnupg \
-        libssl-dev \
+        libssl-dev pkg-config \
         curl \
         git \
         software-properties-common \
@@ -35,6 +35,7 @@ RUN curl https://sh.rustup.rs -sSf | sh -s -- -y --no-modify-path --default-tool
 # Build project
 ADD . /app
 WORKDIR /app
+RUN cargo update
 RUN cargo build --release
 
 # Remove source code
