--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ members = [
     "pallets/referral-system",
     "pallets/bonding-curve-pool",
     "pallets/eth-bridge",
+    "pallets/pswap-distribution",
     "node/",
 ]
 
