--- a/pallets/dex-api/Cargo.toml
+++ b/pallets/dex-api/Cargo.toml
@@ -32,6 +32,7 @@ sp-runtime = { version = "2.0.0", default-features = false }
 permissions = { path = "../permissions", default-features = false }
 technical = { path = "../technical", default-features = false }
 pool-xyk = { path = "../pool-xyk", default-features = false }
+pswap-distribution = { path = "../pswap-distribution", default-features = false }
 hex-literal = "0.3.1"
 
 [features]
