--- a/pallets/farming/Cargo.toml
+++ b/pallets/farming/Cargo.toml
@@ -28,7 +28,6 @@ dex-manager = { path = "../dex-manager", default-features = false }
 trading-pair = { path = "../trading-pair", default-features = false }
 technical = { path = "../technical", default-features = false }
 orml-traits = { version = "0.3.2", default-features = false }
-
 hex-literal = { version = "0.3.1", optional = true }
 
 [dev-dependencies]
@@ -37,6 +36,7 @@ pallet-balances = { version = "2.0.0", default-features = false }
 currencies = { version = "0.3.2", package = "orml-currencies", default-features = false }
 tokens = { version = "0.3.2", package = "orml-tokens", default-features = false }
 mock-liquidity-source = { path = "../mock-liquidity-source", default-features = false }
+pswap-distribution = { path = "../pswap-distribution", default-features = false }
 
 [features]
 default = ['std']
