--- a/pallets/liquidity-proxy/benchmarking/Cargo.toml
+++ b/pallets/liquidity-proxy/benchmarking/Cargo.toml
@@ -21,6 +21,7 @@ pool-xyk = { path = "../../pool-xyk", default-features = false }
 permissions = { path = "../../permissions", default-features = false }
 trading-pair = { path = "../../trading-pair", default-features = false }
 technical = { path = "../../technical", default-features = false }
+pswap-distribution = { path = "../../pswap-distribution", default-features = false }
 
 hex-literal = { version = "0.3.1" }
 
