--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -29,6 +29,7 @@ technical = {path = "../pallets/technical" }
 permissions = {path = "../pallets/permissions" }
 xor-fee = { path = "../pallets/xor-fee" }
 faucet = { path = "../pallets/faucet" }
+iroha-migration = { path = "../pallets/iroha-migration" }
 trading-pair-rpc = { path = "../pallets/trading-pair/rpc" }
 assets-rpc = { path = "../pallets/assets/rpc" }
 liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
