--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -20,6 +20,7 @@ bonding-curve-pool = { path = "../pallets/bonding-curve-pool", default-features 
 dex-api = { path = "../pallets/dex-api", default-features = false }
 dex-manager = { path = "../pallets/dex-manager", default-features = false }
 farming = { path = "../pallets/farming", default-features = false}
+iroha-migration = { path = "../pallets/iroha-migration", default-features = false }
 liquidity-proxy = { path = "../pallets/liquidity-proxy", default-features = false}
 mock-liquidity-source = { path = "../pallets/mock-liquidity-source", default-features = false}
 permissions = { path = "../pallets/permissions", default-features = false}
@@ -127,6 +128,7 @@ std = [
     'eth-bridge/std',
     'farming/std',
     'faucet/std',
+    'iroha-migration/std',
     'liquidity-proxy/std',
     'mock-liquidity-source/std',
     'multisig/std',
