--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -31,12 +31,13 @@ permissions = {path = "../pallets/permissions" }
 xor-fee = { path = "../pallets/xor-fee" }
 faucet = { path = "../pallets/faucet" }
 iroha-migration = { path = "../pallets/iroha-migration" }
+iroha-migration-rpc = { path = "../pallets/iroha-migration/rpc" }
 trading-pair-rpc = { path = "../pallets/trading-pair/rpc" }
 assets-rpc = { path = "../pallets/assets/rpc" }
 liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
 bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "selected-v2.0.0", package = "pallet-multisig" }
 farming-rpc = { path = "../pallets/farming/rpc" }
-iroha-migration-rpc = { path = "../pallets/iroha-migration/rpc" }
+eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 
 # Parachain dependencies
