--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -36,6 +36,7 @@ assets-rpc = { path = "../pallets/assets/rpc" }
 liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
 multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "vmarkushin/multisig", package = "pallet-multisig" }
 farming-rpc = { path = "../pallets/farming/rpc" }
+iroha-migration-rpc = { path = "../pallets/iroha-migration/rpc" }
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
 
 # Parachain dependencies
