Timeout for multi-signature accounts

--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -54,6 +54,7 @@ pallet-aura = { default-features = false, version = '2.0.0' }
 pallet-balances = { default-features = false, version = '2.0.0' }
 pallet-grandpa = { default-features = false, version = '2.0.0' }
 pallet-babe = { default-features = false, version = '2.0.0' }
+pallet-multisig = { version = "2.0.0", default-features = false }
 pallet-randomness-collective-flip = { default-features = false, version = '2.0.0' }
 pallet-sudo = { default-features = false, version = '2.0.0' }
 pallet-timestamp = { default-features = false, version = '2.0.0' }
