--- a/pallets/iroha-migration/Cargo.toml
+++ b/pallets/iroha-migration/Cargo.toml
@@ -14,9 +14,9 @@ hex = { version = "0.4.2", default-features = false }
 serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }
 sha3 = { version = "0.9.1", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
+pallet-multisig = { version = "2.0.0", default-features = false }
 
 # Git dependencies
-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "vmarkushin/multisig", package = "pallet-multisig", default-features = false }
 ed25519-dalek-iroha = { git = "https://github.com/soramitsu/sora2-ed25519-dalek-iroha.git", branch = "develop", default-features = false, features = ["u64_backend"] }
 
 # Path dependencies
@@ -43,6 +43,6 @@ std = [
     'codec/std',
     'frame-support/std',
     'frame-system/std',
-    'multisig/std',
+    'pallet-multisig/std',
     'serde',
 ]
