Use new versions

--- a/pallets/eth-bridge/Cargo.toml
+++ b/pallets/eth-bridge/Cargo.toml
@@ -9,9 +9,9 @@ frame-support = { version = "2.0.0", default-features = false }
 frame-system = { version = "2.0.0", default-features = false }
 sp-std = { version = "2.0.0", default-features = false }
 sp-core = { version = "2.0.0", default-features = false }
-ethereum-types = { default-features = false, features = ['serialize_no_std', 'codec'], path = "../../../parity-common/ethereum-types" }
-ethabi = { path = "../../../ethabi/ethabi", default-features = false }
-jsonrpc-core = { git = "https://github.com/KalitaAlexey/jsonrpc.git", branch = "kalita/merge-and-fragments", default-features = false, package = "jsonrpc-core" }
+ethereum-types = {git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std", package = "ethereum-types", default-features = false, features = ['serialize_no_std', 'codec'] }
+ethabi = { git = "https://github.com/vmarkushin/ethabi.git", branch = "no-std", package = "ethabi", default-features = false }
+jsonrpc-core = { git = "https://github.com/vmarkushin/jsonrpc.git", branch = "no-std", package = "jsonrpc-core", default-features = false }
 rlp = { version = "0.4.6", default-features = false }
 rustc-hex = { version = "2.1.0", default-features = false }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
