Disable github actions on master
Signed-off-by: Vladislav Markushin <negigic@gmail.com>

--- a/.github/workflows/link-check.yml
+++ b/.github/workflows/link-check.yml
@@ -3,10 +3,11 @@ name: Check Links
 on:
   pull_request:
     branches:
-    - master
+    - none
+
   push:
     branches:
-    - master
+    - none
 
 jobs:
   markdown-link-check:
