Save progress: update distribution amount difference calculation

--- a/pallets/multicollateral-bonding-curve-pool/Cargo.toml
+++ b/pallets/multicollateral-bonding-curve-pool/Cargo.toml
@@ -25,6 +25,7 @@ permissions = { path = "../permissions", default-features = false }
 liquidity-proxy = { path = "../liquidity-proxy", default-features = false }
 bonding-curve-pool = { path = "../bonding-curve-pool", default-features = false }
 pswap-distribution = { path = "../pswap-distribution", default-features = false }
+trading-pair = { path = "../trading-pair", default-features = false }
 
 [dev-dependencies]
 sp-core = { version = "2.0.0", default-features = false }
@@ -54,4 +55,5 @@ std = [
     'permissions/std',
     'bonding-curve-pool/std',
     'pswap-distribution/std',
+    'trading-pair/std',
 ]
