[PSS-382] WIP Using Tuple in assets, from and to functions
Code refactoring to use Generic TupleArg and Extra

Refactoring tests

Refactoring mock files

Code clean, remove unnessesiary generic arguments, use just TechAsset and remove MakeTechAssetId

--- a/misc/Makefile
+++ b/misc/Makefile
@@ -46,6 +46,9 @@ cargo-test-release:
 cargo-test-debug:
 	${RUN} "SKIP_WASM_BUILD=1 cargo test"
 
+cargo-check-release:
+	${RUN} "SKIP_WASM_BUILD=1 cargo check --release"
+
 yarn-build:
 	${RUN} "yarn"
 	${RUN} "yarn build"
