--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -35,7 +35,7 @@ iroha-migration-rpc = { path = "../pallets/iroha-migration/rpc" }
 trading-pair-rpc = { path = "../pallets/trading-pair/rpc" }
 assets-rpc = { path = "../pallets/assets/rpc" }
 liquidity-proxy-rpc = { path = "../pallets/liquidity-proxy/rpc" }
-bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "selected-v2.0.0", package = "pallet-multisig" }
+bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "selected-v2.0.0-new/draft-barrier-01", package = "pallet-multisig" }
 farming-rpc = { path = "../pallets/farming/rpc" }
 eth-bridge-rpc = { path = "../pallets/eth-bridge/rpc" }
 libsecp256k1 = { version = "0.3.5", features = ['hmac'], default-features = false }
@@ -76,7 +76,7 @@ sp-finality-grandpa = { version = "2.0.0", default-features = false }
 sc-informant = { version = "0.8.0", default-features = false }
 sc-chain-spec = { version = "2.0.0", default-features = false }
 frame-support = { version = "2.0.0", default-features = false }
-pallet-transaction-payment-rpc = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0"}
+pallet-transaction-payment-rpc = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0-new/draft-barrier-01"}
 frame-benchmarking = '2.0.0'
 frame-benchmarking-cli = '2.0.0'
 substrate-frame-rpc-system = { version = "2.0.0", default-features = false }
