--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -37,7 +37,7 @@ assets-runtime-api = { path = "../pallets/assets/runtime-api", default-features 
 liquidity-proxy-runtime-api = { path = "../pallets/liquidity-proxy/runtime-api", default-features = false}
 eth-bridge = { path = "../pallets/eth-bridge", default-features = false }
 eth-bridge-runtime-api = { path = "../pallets/eth-bridge/runtime-api", default-features = false }
-bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "selected-v2.0.0", package = "pallet-multisig", default-features = false }
+bridge-multisig = { git = "https://github.com/soramitsu/sora2-frame-pallets.git", branch = "selected-v2.0.0-new/draft-barrier-01", package = "pallet-multisig", default-features = false }
 farming-runtime-api = { path = "../pallets/farming/runtime-api", default-features = false}
 iroha-migration-runtime-api = { path = "../pallets/iroha-migration/runtime-api", default-features = false }
 pswap-distribution = { path = "../pallets/pswap-distribution", default-features = false }
@@ -63,9 +63,9 @@ pallet-timestamp = { default-features = false, version = '2.0.0' }
 pallet-contracts = { default-features = false, version = '2.0.0' }
 #pallet-session = { default-features = false, version = '2.0.0' }
 pallet-session = { default-features = false, features = ["historical"], version = '2.0.0' }
-pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0"}
-pallet-transaction-payment = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0"}
-pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0"}
+pallet-staking = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0-new/draft-barrier-01"}
+pallet-transaction-payment = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0-new/draft-barrier-01"}
+pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/soramitsu/sora2-frame-pallets", default-features = false, branch = "selected-v2.0.0-new/draft-barrier-01"}
 pallet-utility = { default-features = false, version = '2.0.0' }
 
 sp-api = { default-features = false, version = '2.0.0' }
